Added GIFs for Projects + c0nn3ct3d

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -20,6 +20,8 @@
 .portfolio__item-image {
     border-radius: 1.5rem;
     overflow: hidden;
+    max-height: 23.5rem;
+    object-fit: contain;
 }
 
 .portfolio__item h3 {
